--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
