added gallery and footer

--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/react-fontawesome": "0.0.20",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-mailchimp-form": "^1.0.1",
     "react-reveal": "^1.2.2",
     "react-scripts": "1.1.4"
   },
