change package.json for github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "thrivingcities",
+  "homepage":"http://thijsnijhof.github.io/thrivingcities-events",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
